[tool.poetry]
name = "youtube-downloader"
version = "0.1.0"
description = "A python tool for command line inputs of downloading youtube videos"
authors = ["Isaac Wines"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytube = "^15.0.0"
ffmpeg-python = "^0.2.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
